# goggles

./: .gitignore  CMakeLists.txt  README.md  microstrain.yaml  package.xml
apps/: head_up_display.cpp  radar_altimeter.cpp  radar_inertial_velocity.cpp  radar_obstacle.cpp  radar_odom_test.cpp  radar_velocity.cpp
config/: microstrain.yaml
eval_tools/: CMakeLists.txt  alignAndEvaluate.cpp  alignByVel.cpp  makePlots.py
include/: AHRSOrientationCostFunction.h  AHRSYawCostFunction.h  BiasParameterBlock.h  BodyDopplerSacModel.h  BodyVelocityCostFunction.h  CeresCostFunction.h  CeresCostFunctions.h  DataTypes.h  DeltaParameterBlock.h  ErrorInterface.h  GlobalDopplerCostFunction.h  GlobalImuVelocityCostFunction.h  GlobalVelocityMeasCostFunction.h  HomogeneousPointParameterBlock.h  HomogeneousPointParameterization.h  IdProvider.h  ImuIntegrator.h  ImuVelocityCostFunction.h  Map.h  MarginalizationError.h  OrientationParameterBlock.h  ParameterBlock.h  ParameterBlockSized.h  PointClusterCostFunction.h  PoseParameterBlock.h  PoseParameterization.h  QuaternionParameterization.h  Transformation.h  VelocityChangeCostFunction.h  VelocityMeasCostFunction.h  VelocityParameterBlock.h
include/impl/: BodyDopplerSacModel.hpp  Transformation.hpp
include/implementation/: BodyDopplerSacModel.hpp
launch/: goggles.launch  radar_inertial_velocity.launch  radar_velocity.launch
nodes/: radar_velocity.py  velocity_estimator_node.py  velocity_estimator_node_v2.py
src/: AHRSOrientationCostFunction.cpp  AHRSYawCostFunction.cpp  BiasParameterBlock.cpp  BodyDopplerSacModel.cpp  BodyVelocityCostFunction.cpp  DeltaParameterBlock.cpp  GlobalDopplerCostFunction.cpp  GlobalImuVelocityCostFunction.cpp  GlobalVelocityMeasCostFunction.cpp  HomogeneousPointParameterBlock.cpp  HomogeneousPointParameterization.cpp  IdProvider.cpp  ImuIntegrator.cpp  ImuVelocityCostFunction.cpp  Map.cpp  MarginalizationError.cpp  OrientationParameterBlock.cpp  PointClusterCostFunction.cpp  PoseParameterBlock.cpp  PoseParameterization.cpp  QuaternionParameterization.cpp  VelocityChangeCostFunction.cpp  VelocityMeasCostFunction.cpp  VelocityParameterBlock.cpp  radar_inertial_velocity.cpp  radar_velocity.cpp
src/goggles/: azimuth_bins_test.py  base_estimator.py  base_estimator_mlesac.py  mlesac.py  orthogonal_distance_regression.py  radar_doppler_model_2D.py  radar_doppler_model_3D.py  radar_utilities.py
test/: CMakeLists.txt  runTests.cpp  testAHRSOrientationCostFunction.cpp  testAHRSYawCostFunction.cpp  testBodyDoppler.cpp  testBodyDopplerSacProblem.cpp  testGlobalDoppler.cpp  testGlobalImuCostFunction.cpp  testGlobalVelocityMeas.cpp  testImuIntegration.cpp  testMarginalization.cpp  testPointCluster.cpp
